<resources>
    <string name="ematy_Value">No Sources Available Check Your Connection</string>
    <string name="multi_select_menu_key">mlti_select_sources</string>
    <string name="multi_select_menu_summry">choose the sources you want</string>
    <string name="multi_select_menu_title">Sources</string>


    <string name="app_name">News</string>
    <string name="action_settings">Setting</string>

    <string name="business_key">business</string>
    <string name="entertainment_key">entertainment</string>
    <string name="gaming_key">gaming</string>
    <string name="politics_key">politics</string>
    <string name="science_and_nature_key">science-and-nature</string>
    <string name="sport_key">sport</string>
    <string name="technology_name">Technology</string>
    <string name="business_name">Business</string>
    <string name="entertainment_name">Entertainment</string>
    <string name="gaming_name">Gaming</string>
    <string name="politics_name">Politics</string>
    <string name="science_and_nature_name">Science-and-Nature</string>
    <string name="sport_name">Sport</string>
    <string name="technology_key">Technology</string>
    <string name="category_title">Category</string>
    <string name="category_key">category</string>
    <string name="category_summery">choose your preferred Categories</string>

    <string name="lan_name">Languages</string>
    <string name="lan_key">lang</string>
    <string name="english_key">en</string>
    <string name="english_value">English</string>
    <string name="deutsch_key">de</string>
    <string name="deutsch_value">Detach</string>
    <string name="french_key">fr</string>
    <string name="french_value">French</string>
    <string name="lan_sumaray">Choose your preferred Languages</string>

    <string name="australia_key">au</string>
    <string name="germany_key">de</string>
    <string name="united_kingdom_key">gb</string>
    <string name="india_key">in</string>
    <string name="italy_key">it</string>
    <string name="united_states_key">us</string>
    <string name="australia_name">Australia</string>
    <string name="germany_name">Germany</string>
    <string name="united_kingdom_name">United kingdom</string>
    <string name="india_name">India</string>
    <string name="italy_name">Italy</string>
    <string name="united_states_name">United States</string>
    <string name="country_name">Countries</string>
    <string name="country_key">countries</string>
    <string name="country_summry">Choose your preferred Countries</string>

    <string name="title_activity_setting_activiy">SettingActiviy</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="appwidget_text">NewsSpi</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_error">No News Loaded</string>

    <string name="notifications_key">notfi</string>
    <string name="notifications_title">News Notifications</string>
    <string name="notifications_summry">Check for Update Notifications </string>

    <string name="see_first_key">see_first</string>
    <string name="see_first_title">See First</string>
    <string name="see_first_sammry">What To See First</string>
    <string name="latest_key">latest</string>
    <string name="latest_name">Latest News</string>
    <string name="top_key">top</string>
    <string name="top_name">Top News</string>
    <string name="popular_key">popular</string>
    <string name="popular_name">Popular News</string>

    <string name="backed_up_data_title">Backup data</string>
    <string name="backed_up_data_sammry">How Much Data To Backup</string>

    <string name="backed_up_data_three_days_name">3 days</string>
    <string name="backed_up_data_two_weeks_name">14 days</string>
    <string name="backed_up_data_month_name">30 days</string>
    <string name="backed_up_data_name">day</string>

    <string name="backed_up_data_key">1</string>
    <string name="backed_up_data_three_days_key">3</string>
    <string name="backed_up_data_two_weeks_key">14</string>
    <string name="backed_up_data_month_key">30</string>

    <string name="sources_title">Sources</string>
    <string name="sources_summry">Choose your preferred Countries</string>
    <string name="sources_key">sources</string>

    <string name="multi_source_pref_key">sources2</string>

    <string-array name="empty"></string-array>
    <string name="empty_recycle">No data loaded check your connection</string>

    <string name="empty_resources_reslut">Cannot do that it will give you no Resources</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="new_search_hint">Enter news Source OR any Title</string>
    <string name="news_search_empty">No data match try another world</string>

    <string name="face">Share to FaceBook</string>
    <string name="gmail">Share To Google+</string>
    <string name="twitter">Share To Twitter</string>
    <string name="facebook_key">1555278667876394</string>

    <string name="app_logo_descrption">this is app logo</string>
    <string name="cancel_descrption">cancel the search</string>
    <string name="menu_descrption">share menu</string>
    <string name="dialog_message">Google Play Services Not Found press OK To download</string>
    <string name="dialog_title">Google play Services error</string>
    <string name="ok">Go to Play Store</string>
    <string name="cancel">Close</string>
    <string name="toast_gmail">You haven\'t installed google+ on your device</string>
    <string name="new_news">Come to see what\'s new</string>


</resources>

