<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/lan_key"
        android:title="@string/lan_name">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/english_key"
            android:summary="@string/french_key"
            android:title="@string/french_key" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/deutsch_key"
            android:summary="@string/french_key"
            android:title="@string/french_key" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/french_key"
            android:summary="@string/french_key"
            android:title="@string/french_key" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/lan_key"
        android:title="@string/lan_name">
        <MultiSelectListPreference
            android:defaultValue="@android:array/config_keySystemUuidMapping"
            android:entries="@android:array/emailAddressTypes"
            android:entryValues="@android:array/emailAddressTypes"
            android:key="multi_select_list_preference_1"
            android:title="Multi select list preference" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/english_key"
            android:summary="@string/french_key"
            android:title="@string/french_key" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/deutsch_key"
            android:summary="@string/french_key"
            android:title="@string/french_key" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/french_key"
            android:summary="@string/french_key"
            android:title="@string/french_key" />
    </PreferenceCategory>

</PreferenceScreen>